apps/tandoor/60-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipes
  namespace: tandoor
  labels:
    app: recipes
    tier: frontend
spec:
  selector:
    app: recipes
    tier: frontend
  ports:
  - port: 80
    targetPort: http
    name: http
    protocol: TCP
  - port: 8080
    targetPort: gunicorn
    name: gunicorn
    protocol: TCP
