apps/tandoor/70-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  name: recipes
  namespace: tandoor
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - backend:
          service:
            name: recipes
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: recipes
            port:
              number: 80
        path: /media
        pathType: Prefix
      - backend:
          service:
            name: recipes
            port:
              number: 80
        path: /static
        pathType: Prefix
  tls:
  - hosts:
    - recipes
