apps/tandoor/postgres.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: recipes
  namespace: tandoor
spec:
  podSelector: 
    matchLabels:
      app: recipes
      tier: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    # Allow tandoor to pg
    - podSelector:
        matchExpressions:
          - key: app
            operator: In
            values:
            - recipes
          - key: tier
            operator: In
            values:
            - frontend
    # Allow cnpg operator
    - podSelector:
        matchExpressions:
          - key: app.kubernetes.io/instance
            operator: In
            values:
            - cnpg
    ports:
    - protocol: TCP
      port: 5432
